[package]
name = "ldrc"
version = "0.1.1"
edition = "2021"
description = "Linux Docker Rust Compiler for Windows"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
fs_extra = "1.3.0"

